# wgpu-pbr

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
examples/: basic.rs  scene_viewer.rs
scripts/: build-shaders.sh  build-web-demo.sh  build_shaders.sh  index.html
shaders/: bake_shadow.vert  pbr.vert  tex_emiss_pbr.frag  tex_norm.frag  tex_norm_pbr.frag  tex_pbr.frag  tex_unlit.frag  tex_unlit.vert  untex_pbr.frag
src/: camera.rs  compute_tangents.rs  gltf.rs  lib.rs  light.rs  mod.rs  obj.rs  renderer.rs  resources.rs  scene.rs
src/mesh/: consts.rs  geometry.rs  material.rs  mesh.rs  mesh_part.rs  mesh_pass.rs  mesh_pipeline.rs  mod.rs
src/mesh/shaders/: pbr_vert.spv  tex_emiss_pbr_frag.spv  tex_norm_frag.spv  tex_norm_pbr_frag.spv  tex_pbr_frag.spv  tex_unlit_frag.spv  tex_unlit_vert.spv  untex_pbr_frag.spv
